native/include/av1scope_inspection.h

typedef struct av1scope_inspector av1scope_inspector;
/* chunk and records are borrowed only for the duration of the callback. The
 * callback must copy accepted records and may return CANCELLED/RESOURCE_LIMIT
 * to stop production. record_count must not exceed the negotiated maximum. */

typedef struct av1scope_inspection_options_v1 {
  uint32_t struct_size;
  uint32_t abi_version;
  uint32_t feature_flags;
  uint32_t maximum_blocks_per_chunk;
  uint64_t maximum_frame_bytes;
  av1scope_block_chunk_fn_v1 on_block_chunk;
  void *user_data;
} av1scope_inspection_options_v1;
typedef struct av1scope_inspection_options_v2 {
  uint32_t struct_size;
  uint32_t abi_version;
  uint32_t feature_flags;
  uint32_t maximum_blocks_per_chunk;
  uint64_t maximum_frame_bytes;
  av1scope_block_chunk_fn_v2 on_block_chunk;
  void *user_data;
} av1scope_inspection_options_v2;
AV1SCOPE_API av1scope_status_v1 av1scope_inspection_adapter_info_v1(
  av1scope_adapter_info_v1 *out_info
);
AV1SCOPE_API av1scope_status_v1 av1scope_inspector_create_v1(
  const av1scope_inspection_options_v1 *options,
  av1scope_inspector **out_inspector,
  av1scope_diagnostic_v1 *out_diagnostic
);
AV1SCOPE_API av1scope_status_v1 av1scope_inspector_decode_frame_v1(
  av1scope_inspector *inspector,
  uint64_t frame_id,
  av1scope_bytes_v1 sample,
  const av1scope_call_context_v1 *call,
  av1scope_diagnostic_v1 *out_diagnostic
);
AV1SCOPE_API av1scope_status_v1 av1scope_inspector_flush_v1(
  av1scope_inspector *inspector,
  const av1scope_call_context_v1 *call,
  av1scope_diagnostic_v1 *out_diagnostic
);
AV1SCOPE_API void av1scope_inspector_destroy_v1(av1scope_inspector *inspector);
AV1SCOPE_API av1scope_status_v1 av1scope_inspector_create_v2(
  const av1scope_inspection_options_v2 *options,
  av1scope_inspector **out_inspector,
  av1scope_diagnostic_v1 *out_diagnostic
);
AV1SCOPE_API av1scope_status_v1 av1scope_inspector_decode_frame_v2(
  av1scope_inspector *inspector,
  uint64_t frame_id,
  av1scope_bytes_v1 sample,
  const av1scope_call_context_v1 *call,
  av1scope_diagnostic_v1 *out_diagnostic
);
AV1SCOPE_API av1scope_status_v1 av1scope_inspector_flush_v2(
  av1scope_inspector *inspector,
  const av1scope_call_context_v1 *call,
  av1scope_diagnostic_v1 *out_diagnostic
);
AV1SCOPE_API void av1scope_inspector_destroy_v2(av1scope_inspector *inspector);